applications/loky-planner/postgres-api-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loky-postgres-kubernetes-api
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: loky-postgres
  egress:
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
